--- a/Quizwanie/Views/Home/Index.cshtml
+++ b/Quizwanie/Views/Home/Index.cshtml
@@ -5,5 +5,8 @@
 <div class="jumbotron">
     <h1>ASP.NET Projekt Quiz</h1>
     <p class="lead">Projekt z przedmiotu SERWISY INTERNETOWE .NET</p>
+@if (!Request.IsAuthenticated)
+{
     <p><a href="/Account/Register" class="btn btn-primary btn-lg">Załóż konto &raquo;</a></p>
+}
 </div>
